# wandering-rag

./: .env.example  .gitignore  README.md  pyproject.toml  wandering-rag
mcp-server-qdrant/: README.md
mcp-server-qdrant/src/mcp_server_qdrant/: qdrant.py  server.py
notion-indexer/: .env.example  .gitignore  README.md  notion_indexer.py  requirements.in  search.py  setup.sh
obsidian-indexer/: .gitignore  obsidian-indexer.py  requirements.in  search.py  setup.sh
qdrant-docker/: README.md  docker-compose.yml
src/wandering_rag/: __init__.py  cli.py
src/wandering_rag/embeddings/: README.md  base.py  factory.py  fastembed.py  sentence_transformers.py  types.py
src/wandering_rag/mcp/: __init__.py  mcp_cli.py  server.py  settings.py
src/wandering_rag/md/: __init__.py  indexer.py
src/wandering_rag/notion/: __init__.py  indexer.py
src/wandering_rag/search/: __init__.py  search_cli.py
src/wandering_rag/vector_store/: __init__.py  qdrant_store.py  vector_doc.py
