[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wandering-rag"
version = "0.1.0"
description = "Wandering RAG CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0.0",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.6.0",
    "sentence-transformers>=2.5.0",
    "rich>=13.7.0",
    "python-frontmatter",
    "langchain-text-splitters>=0.0.1",
    "mcp[cli]>=1.3.0",
    "notion-client>=2.2.1",
]

[project.scripts]
wandering-rag = "wandering_rag.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wandering_rag"]
